<resources>
    <string name="app_name">MAD_Activity_03</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
</resources>